--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@
             <div class="animate_top sg oi pi zq ml il am cn _m">
               <img src="images/Screenshot 2025-05-29 235753.png" alt="Icon" />
               <h4 class="ek zj kk wm nb _b">Scatter graph</h4>
-              <p>y = -2,196076105x + 377,835489R²  R^2= 0,0025.<br> The graph shows the correlation between social media usage duration and final report card grades at Yosuka High School. With a correlation coefficient of r = -0.2196, the relationship is weak or nearly negligible.</p>
+              <p>y = -2,196076105x + 377,835489R²  R^2= 0,0025.<br> The graph shows the correlation between social media usage duration and final report card grades at Yosuka High School. With a correlation coefficient of r = -0.2196, the relationship is very weak or nearly negligible.</p>
             </div>
 
             <!-- Service Item -->
